feat: initialize project + push saturday, sunday and monday work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    // default
     "target": "esnext",
     "module": "esnext",
     "strict": true,
@@ -26,6 +27,10 @@
       "dom",
       "dom.iterable",
       "scripthost"
+    ],
+    // custom
+    "typeRoots": [
+      "./src/types"
     ]
   },
   "include": [
