--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.1.9",
+    "vue-meta": "^3.0.0-alpha.7",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
