--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.1.9",
     "vue-meta": "^3.0.0-alpha.7",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
