--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-confetti": "^2.3.0",
+    "vue-confetti-explosion": "^1.0.1",
     "vue-i18n": "^9.1.9",
     "vue-meta": "^3.0.0-alpha.7",
     "vue-property-decorator": "^9.1.2",
