--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-meta": "^3.0.0-alpha.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.0-0",
+    "vue2-animate": "^2.1.4",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
